--- a/src/main/resources/static/html/editForm.html
+++ b/src/main/resources/static/html/editForm.html
@@ -6,13 +6,17 @@
 
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-    <style> .container { max-width: 560px; } </style> </head> <body>
+    <style> .container {
+        max-width: 560px;
+    } </style>
+</head>
+<body>
 
 <div class="container">
 
     <div class="py-5 text-center">
 
-        <h2>상품 수정 폼</h2> </div>
+        <h2>상품 수정 폼</h2></div>
 
     <form action="item.html" method="post">
 
@@ -20,54 +24,50 @@
 
             <label for="id">상품 ID</label>
 
-            <input type="text" id="id" name="id" class="form-control" value="1"
+            <input type="text" id="id" name="id" class="form-control" value="1" readonly>
 
-                   readonly>
+        </div>
+        <div>
 
-        </div> <div>
+            <label for="itemName">상품명</label>
 
-        <label for="itemName">상품명</label>
+            <input type="text" id="itemName" name="itemName" class="form-control" value="상품A">
 
-        <input type="text" id="itemName" name="itemName" class="form-
+        </div>
+        <div>
 
-control" value="상품A">
+            <label for="price">가격</label>
 
-    </div> <div>
+            <input type="text" id="price" name="price" class="form-control" value="10000">
 
-        <label for="price">가격</label>
+        </div>
+        <div>
 
-        <input type="text" id="price" name="price" class="form-control"
+            <label for="quantity">수량</label>
 
-               value="10000">
-
-    </div> <div>
-
-        <label for="quantity">수량</label>
-
-        <input type="text" id="quantity" name="quantity" class="form-
-
-control" value="10">
-
-    </div>
-
-        <hr class="my-4"> <div class="row">
-
-        <div class="col">
-
-            <button class="w-100 btn btn-primary btn-lg" type="submit">저장</
-
-            button>
+            <input type="text" id="quantity" name="quantity" class="form-control" value="10">
 
         </div>
 
-        <div class="col">
+        <hr class="my-4">
+        <div class="row">
 
-            <button class="w-100 btn btn-secondary btn-lg"
+            <div class="col">
 
-                    onclick="location.href='item.html'" type="button">취소</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">저장</button>
 
-        </div> </div>
+            </div>
+
+            <div class="col">
+
+                <button class="w-100 btn btn-secondary btn-lg"
+
+                        onclick="location.href='item.html'" type="button">취소</button>
+
+            </div>
+        </div>
 
     </form>
 
-</div> <!-- /container --> </body> </html>
+</div> <!-- /container --> </body>
+</html>
